--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ Specialization: Computer Graphics</p>
   <div class="row">
      <div class="col-xs-12" id="resHead">
          <h3>The Resume Of</h3>
-         <h1>Jacob Johnson</h1>
-       <a href="http://jacobjohnson.net"><h3>JacobJohnson.net</h3></a>
-         <img src="http://jacobjohnson.net/img/logo.png" width="20%">
+         <h1>shwetha</h1>
+       <a href="http://shweha.net"><h3>shwetha.net</h3></a>
+         <img src="http://shwetha.net/img/logo.png" width="20%">
      </div>
    </div>
   <div class="row">
